TCP server initial commit

--- a/AI.ioc
+++ b/AI.ioc
@@ -12,7 +12,7 @@ FREERTOS.configMINIMAL_STACK_SIZE=256
 FREERTOS.configTOTAL_HEAP_SIZE=15360
 File.Version=6
 KeepUserPlacement=false
-LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,LWIP_HTTPD,LWIP_HTTPD_CGI_SSI,LWIP_HTTPD_SSI_RAW,LWIP_HTTPD_SSI,LWIP_HTTPD_CGI
+LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,LWIP_HTTPD,LWIP_HTTPD_CGI_SSI,LWIP_HTTPD_SSI_RAW,LWIP_HTTPD_SSI,LWIP_HTTPD_CGI,TCP_WND,TCP_MSS,TCP_SND_BUF,MEMP_NUM_TCP_SEG
 LWIP.IP_ADDRESS=192.168.004.253
 LWIP.LWIP_DHCP=0
 LWIP.LWIP_HTTPD=1
@@ -20,7 +20,11 @@ LWIP.LWIP_HTTPD_CGI=1
 LWIP.LWIP_HTTPD_CGI_SSI=0
 LWIP.LWIP_HTTPD_SSI=1
 LWIP.LWIP_HTTPD_SSI_RAW=0
+LWIP.MEMP_NUM_TCP_SEG=24
 LWIP.NETMASK_ADDRESS=255.255.255.000
+LWIP.TCP_MSS=460
+LWIP.TCP_SND_BUF=1840
+LWIP.TCP_WND=2048
 LWIP.Version=v2.0.3_Cube
 Mcu.Family=STM32F4
 Mcu.IP0=ETH
