--- a/AI.ioc
+++ b/AI.ioc
@@ -6,10 +6,13 @@ ETH.PHY_Name_RMII=userPHY
 ETH.PHY_User_Name=DP83848I
 ETH.PhyAddress=1
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK,configMINIMAL_STACK_SIZE,configCHECK_FOR_STACK_OVERFLOW,configTOTAL_HEAP_SIZE
+FREERTOS.HEAP_NUMBER=4
+FREERTOS.IPParameters=Tasks01,FootprintOK,configMINIMAL_STACK_SIZE,configCHECK_FOR_STACK_OVERFLOW,configTOTAL_HEAP_SIZE,HEAP_NUMBER,configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY,configQUEUE_REGISTRY_SIZE
 FREERTOS.Tasks01=defaultTask,0,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configCHECK_FOR_STACK_OVERFLOW=0
-FREERTOS.configMINIMAL_STACK_SIZE=256
+FREERTOS.configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY=5
+FREERTOS.configMINIMAL_STACK_SIZE=512
+FREERTOS.configQUEUE_REGISTRY_SIZE=16
 FREERTOS.configTOTAL_HEAP_SIZE=15360
 File.Version=6
 KeepUserPlacement=false
@@ -41,9 +44,11 @@ Mcu.IP2=LWIP
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SYS
-Mcu.IP6=TIM8
-Mcu.IP7=UART5
-Mcu.IPNb=8
+Mcu.IP6=TIM7
+Mcu.IP7=TIM8
+Mcu.IP8=UART5
+Mcu.IP9=USART1
+Mcu.IPNb=10
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0-OSC_IN
@@ -52,17 +57,20 @@ Mcu.Pin10=PB10
 Mcu.Pin11=PB11
 Mcu.Pin12=PB12
 Mcu.Pin13=PB13
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14
-Mcu.Pin16=PC12
-Mcu.Pin17=PD2
-Mcu.Pin18=PB3
-Mcu.Pin19=PE0
+Mcu.Pin14=PA9
+Mcu.Pin15=PA10
+Mcu.Pin16=PA13
+Mcu.Pin17=PA14
+Mcu.Pin18=PC12
+Mcu.Pin19=PD2
 Mcu.Pin2=PC1
-Mcu.Pin20=VP_FREERTOS_VS_ENABLE
-Mcu.Pin21=VP_LWIP_VS_Enabled
-Mcu.Pin22=VP_SYS_VS_tim1
-Mcu.Pin23=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin20=PB3
+Mcu.Pin21=PE0
+Mcu.Pin22=VP_FREERTOS_VS_ENABLE
+Mcu.Pin23=VP_LWIP_VS_Enabled
+Mcu.Pin24=VP_SYS_VS_tim1
+Mcu.Pin25=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin26=VP_TIM8_VS_ClockSourceINT
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA7
@@ -70,7 +78,7 @@ Mcu.Pin6=PC4
 Mcu.Pin7=PC5
 Mcu.Pin8=PE9
 Mcu.Pin9=PE10
-Mcu.PinsNb=24
+Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -86,7 +94,8 @@ NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false
-NVIC.TIM1_UP_TIM10_IRQn=true\:5\:0\:false\:false\:true\:true\:false
+NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.TIM7_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.TIM8_UP_TIM13_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
@@ -94,6 +103,8 @@ NVIC.UART5_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA1.Mode=RMII
 PA1.Signal=ETH_REF_CLK
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
 PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Trace_Asynchronous_SW
@@ -102,6 +113,8 @@ PA2.Mode=RMII
 PA2.Signal=ETH_MDIO
 PA7.Mode=RMII
 PA7.Signal=ETH_CRS_DV
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
 PB10.Locked=true
 PB10.Signal=ETH_RX_ER
 PB11.Mode=RMII
@@ -155,7 +168,7 @@ ProjectManager.DeviceId=STM32F407VETx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.22.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x4000
+ProjectManager.HeapSize=0x8000
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
@@ -169,7 +182,7 @@ ProjectManager.StackSize=0x8000
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_LWIP_Init-LWIP-false-HAL-true,4-MX_UART5_Init-UART5-false-HAL-true,5-MX_TIM8_Init-TIM8-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_LWIP_Init-LWIP-false-HAL-true,4-MX_UART5_Init-UART5-false-HAL-true,5-MX_TIM8_Init-TIM8-false-HAL-true,6-MX_TIM7_Init-TIM7-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.48MHZClocksFreq_Value=67200000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -204,6 +217,8 @@ RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=96000000
+TIM7.IPParameters=Period
+TIM7.Period=840
 TIM8.CounterMode=TIM_COUNTERMODE_UP
 TIM8.IPParameters=CounterMode,Period
 TIM8.Period=27720
@@ -212,12 +227,18 @@ UART5.IPParameters=VirtualMode,Parity,BaudRate,WordLength
 UART5.Parity=PARITY_EVEN
 UART5.VirtualMode=Asynchronous
 UART5.WordLength=WORDLENGTH_9B
+USART1.BaudRate=460800
+USART1.IPParameters=VirtualMode,BaudRate,Mode
+USART1.Mode=MODE_TX
+USART1.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_ENABLE.Mode=Enabled
 VP_FREERTOS_VS_ENABLE.Signal=FREERTOS_VS_ENABLE
 VP_LWIP_VS_Enabled.Mode=Enabled
 VP_LWIP_VS_Enabled.Signal=LWIP_VS_Enabled
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
+VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 VP_TIM8_VS_ClockSourceINT.Mode=Internal
 VP_TIM8_VS_ClockSourceINT.Signal=TIM8_VS_ClockSourceINT
 board=custom
