--- a/AI.ioc
+++ b/AI.ioc
@@ -1,4 +1,16 @@
 #MicroXplorer Configuration settings - do not modify
+Dma.Request0=USART1_TX
+Dma.RequestsNb=1
+Dma.USART1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART1_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART1_TX.0.Instance=DMA2_Stream7
+Dma.USART1_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.USART1_TX.0.Mode=DMA_NORMAL
+Dma.USART1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_TX.0.Priority=DMA_PRIORITY_MEDIUM
+Dma.USART1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 ETH.IPParameters=MediaInterface,PhyAddress,MACAddr,PHY_Name_RMII,PHY_User_Name
 ETH.MACAddr=00\:02\:A2\:42\:50\:E4
 ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
@@ -38,17 +50,18 @@ LWIP.TCP_SND_BUF=1840
 LWIP.TCP_WND=4096
 LWIP.Version=v2.0.3_Cube
 Mcu.Family=STM32F4
-Mcu.IP0=ETH
-Mcu.IP1=FREERTOS
-Mcu.IP2=LWIP
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=TIM7
-Mcu.IP7=TIM8
-Mcu.IP8=UART5
-Mcu.IP9=USART1
-Mcu.IPNb=10
+Mcu.IP0=DMA
+Mcu.IP1=ETH
+Mcu.IP10=USART1
+Mcu.IP2=FREERTOS
+Mcu.IP3=LWIP
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SYS
+Mcu.IP7=TIM7
+Mcu.IP8=TIM8
+Mcu.IP9=UART5
+Mcu.IPNb=11
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0-OSC_IN
@@ -85,6 +98,7 @@ Mcu.UserName=STM32F407VETx
 MxCube.Version=5.0.0
 MxDb.Version=DB.5.0.0
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.DMA2_Stream7_IRQn=true\:5\:0\:false\:false\:true\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ETH_IRQn=true\:5\:0\:false\:false\:true\:true\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -100,6 +114,7 @@ NVIC.TIM8_UP_TIM13_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.UART5_IRQn=true\:5\:0\:false\:false\:true\:true\:true
+NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA1.Mode=RMII
 PA1.Signal=ETH_REF_CLK
@@ -182,7 +197,7 @@ ProjectManager.StackSize=0x8000
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_LWIP_Init-LWIP-false-HAL-true,4-MX_UART5_Init-UART5-false-HAL-true,5-MX_TIM8_Init-TIM8-false-HAL-true,6-MX_TIM7_Init-TIM7-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_LWIP_Init-LWIP-false-HAL-true,5-MX_UART5_Init-UART5-false-HAL-true,6-MX_TIM8_Init-TIM8-false-HAL-true,7-MX_TIM7_Init-TIM7-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.48MHZClocksFreq_Value=67200000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
