Thread tracing added

--- a/AI.ioc
+++ b/AI.ioc
@@ -19,13 +19,15 @@ ETH.PHY_User_Name=DP83848I
 ETH.PhyAddress=1
 FREERTOS.FootprintOK=true
 FREERTOS.HEAP_NUMBER=4
-FREERTOS.IPParameters=Tasks01,FootprintOK,configMINIMAL_STACK_SIZE,configCHECK_FOR_STACK_OVERFLOW,configTOTAL_HEAP_SIZE,HEAP_NUMBER,configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY,configQUEUE_REGISTRY_SIZE
+FREERTOS.IPParameters=Tasks01,FootprintOK,configMINIMAL_STACK_SIZE,configCHECK_FOR_STACK_OVERFLOW,configTOTAL_HEAP_SIZE,HEAP_NUMBER,configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY,configQUEUE_REGISTRY_SIZE,configGENERATE_RUN_TIME_STATS,configUSE_TRACE_FACILITY
 FREERTOS.Tasks01=defaultTask,0,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configCHECK_FOR_STACK_OVERFLOW=0
+FREERTOS.configGENERATE_RUN_TIME_STATS=1
 FREERTOS.configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY=5
 FREERTOS.configMINIMAL_STACK_SIZE=512
 FREERTOS.configQUEUE_REGISTRY_SIZE=16
 FREERTOS.configTOTAL_HEAP_SIZE=15360
+FREERTOS.configUSE_TRACE_FACILITY=1
 File.Version=6
 KeepUserPlacement=false
 LWIP.DEFAULT_THREAD_STACKSIZE=2048
