First working PCB

--- a/AI.ioc
+++ b/AI.ioc
@@ -26,30 +26,27 @@ ETH.IPParameters=MediaInterface,PhyAddress,MACAddr,PHY_Name_RMII,PHY_User_Name
 ETH.MACAddr=00\:02\:A2\:42\:50\:E4
 ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
 ETH.PHY_Name_RMII=userPHY
-ETH.PHY_User_Name=DP83848I
+ETH.PHY_User_Name=DP83848
 ETH.PhyAddress=1
 FREERTOS.FootprintOK=true
 FREERTOS.HEAP_NUMBER=4
-FREERTOS.IPParameters=Tasks01,FootprintOK,configMINIMAL_STACK_SIZE,configCHECK_FOR_STACK_OVERFLOW,configTOTAL_HEAP_SIZE,HEAP_NUMBER,configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY,configQUEUE_REGISTRY_SIZE,configGENERATE_RUN_TIME_STATS,configUSE_TRACE_FACILITY
+FREERTOS.IPParameters=Tasks01,FootprintOK,configMINIMAL_STACK_SIZE,configCHECK_FOR_STACK_OVERFLOW,configTOTAL_HEAP_SIZE,HEAP_NUMBER,configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY,configQUEUE_REGISTRY_SIZE,configGENERATE_RUN_TIME_STATS,configUSE_TRACE_FACILITY,MEMORY_ALLOCATION
+FREERTOS.MEMORY_ALLOCATION=2
 FREERTOS.Tasks01=defaultTask,0,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configCHECK_FOR_STACK_OVERFLOW=0
 FREERTOS.configGENERATE_RUN_TIME_STATS=1
 FREERTOS.configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY=5
 FREERTOS.configMINIMAL_STACK_SIZE=512
 FREERTOS.configQUEUE_REGISTRY_SIZE=16
-FREERTOS.configTOTAL_HEAP_SIZE=15360
+FREERTOS.configTOTAL_HEAP_SIZE=36864
 FREERTOS.configUSE_TRACE_FACILITY=1
 File.Version=6
 KeepUserPlacement=false
 LWIP.DEFAULT_THREAD_STACKSIZE=2048
-LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,LWIP_HTTPD,LWIP_HTTPD_CGI_SSI,LWIP_HTTPD_SSI_RAW,LWIP_HTTPD_SSI,LWIP_HTTPD_CGI,TCP_WND,TCP_MSS,TCP_SND_BUF,MEMP_NUM_TCP_SEG,MEMP_NUM_TCP_PCB,MEMP_NUM_NETBUF,MEMP_NUM_NETCONN,MEMP_NUM_TCPIP_MSG_API,TCPIP_THREAD_STACKSIZE,SLIPIF_THREAD_STACKSIZE,DEFAULT_THREAD_STACKSIZE
+LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,LWIP_HTTPD,TCP_WND,TCP_MSS,TCP_SND_BUF,MEMP_NUM_TCP_SEG,MEMP_NUM_TCP_PCB,MEMP_NUM_NETBUF,MEMP_NUM_NETCONN,MEMP_NUM_TCPIP_MSG_API,TCPIP_THREAD_STACKSIZE,SLIPIF_THREAD_STACKSIZE,DEFAULT_THREAD_STACKSIZE
 LWIP.IP_ADDRESS=192.168.004.253
 LWIP.LWIP_DHCP=0
 LWIP.LWIP_HTTPD=1
-LWIP.LWIP_HTTPD_CGI=1
-LWIP.LWIP_HTTPD_CGI_SSI=0
-LWIP.LWIP_HTTPD_SSI=1
-LWIP.LWIP_HTTPD_SSI_RAW=0
 LWIP.MEMP_NUM_NETBUF=4
 LWIP.MEMP_NUM_NETCONN=8
 LWIP.MEMP_NUM_TCPIP_MSG_API=16
@@ -197,7 +194,7 @@ ProjectManager.DeviceId=STM32F407VETx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.22.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x8000
+ProjectManager.HeapSize=0x2000
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
@@ -207,7 +204,7 @@ ProjectManager.PreviousToolchain=TrueSTUDIO
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=AI.ioc
 ProjectManager.ProjectName=AI
-ProjectManager.StackSize=0x8000
+ProjectManager.StackSize=0x4000
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
