--- a/AI.ioc
+++ b/AI.ioc
@@ -30,27 +30,30 @@ ETH.PHY_User_Name=DP83848
 ETH.PhyAddress=1
 FREERTOS.FootprintOK=true
 FREERTOS.HEAP_NUMBER=4
-FREERTOS.IPParameters=Tasks01,FootprintOK,configMINIMAL_STACK_SIZE,configCHECK_FOR_STACK_OVERFLOW,configTOTAL_HEAP_SIZE,HEAP_NUMBER,configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY,configQUEUE_REGISTRY_SIZE,configGENERATE_RUN_TIME_STATS,configUSE_TRACE_FACILITY,MEMORY_ALLOCATION
+FREERTOS.IPParameters=Tasks01,FootprintOK,configMINIMAL_STACK_SIZE,configCHECK_FOR_STACK_OVERFLOW,configTOTAL_HEAP_SIZE,HEAP_NUMBER,configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY,configQUEUE_REGISTRY_SIZE,configGENERATE_RUN_TIME_STATS,configUSE_TRACE_FACILITY,MEMORY_ALLOCATION,configUSE_TIMERS,Timers01
 FREERTOS.MEMORY_ALLOCATION=2
 FREERTOS.Tasks01=defaultTask,0,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Timers01=myTimer01,Callback01,osTimerOnce,As weak,NULL,Dynamic,NULL
 FREERTOS.configCHECK_FOR_STACK_OVERFLOW=0
 FREERTOS.configGENERATE_RUN_TIME_STATS=1
 FREERTOS.configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY=5
 FREERTOS.configMINIMAL_STACK_SIZE=512
 FREERTOS.configQUEUE_REGISTRY_SIZE=16
 FREERTOS.configTOTAL_HEAP_SIZE=36864
+FREERTOS.configUSE_TIMERS=1
 FREERTOS.configUSE_TRACE_FACILITY=1
 File.Version=6
 KeepUserPlacement=false
 LWIP.DEFAULT_THREAD_STACKSIZE=2048
-LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,LWIP_HTTPD,TCP_WND,TCP_MSS,TCP_SND_BUF,MEMP_NUM_TCP_SEG,MEMP_NUM_TCP_PCB,MEMP_NUM_NETBUF,MEMP_NUM_NETCONN,MEMP_NUM_TCPIP_MSG_API,TCPIP_THREAD_STACKSIZE,SLIPIF_THREAD_STACKSIZE,DEFAULT_THREAD_STACKSIZE
+LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,LWIP_HTTPD,TCP_WND,TCP_MSS,TCP_SND_BUF,MEMP_NUM_TCP_SEG,MEMP_NUM_TCP_PCB,MEMP_NUM_NETBUF,MEMP_NUM_NETCONN,MEMP_NUM_TCPIP_MSG_API,TCPIP_THREAD_STACKSIZE,SLIPIF_THREAD_STACKSIZE,DEFAULT_THREAD_STACKSIZE,LWIP_UDP
 LWIP.IP_ADDRESS=192.168.004.253
 LWIP.LWIP_DHCP=0
 LWIP.LWIP_HTTPD=1
+LWIP.LWIP_UDP=0
 LWIP.MEMP_NUM_NETBUF=4
 LWIP.MEMP_NUM_NETCONN=8
 LWIP.MEMP_NUM_TCPIP_MSG_API=16
-LWIP.MEMP_NUM_TCP_PCB=8
+LWIP.MEMP_NUM_TCP_PCB=16
 LWIP.MEMP_NUM_TCP_SEG=24
 LWIP.NETMASK_ADDRESS=255.255.255.000
 LWIP.SLIPIF_THREAD_STACKSIZE=2048
