--- a/AI.ioc
+++ b/AI.ioc
@@ -42,6 +42,9 @@ FREERTOS.configTOTAL_HEAP_SIZE=36864
 FREERTOS.configUSE_TIMERS=0
 FREERTOS.configUSE_TRACE_FACILITY=1
 File.Version=6
+IWDG.IPParameters=Prescaler,Reload
+IWDG.Prescaler=IWDG_PRESCALER_4
+IWDG.Reload=400
 KeepUserPlacement=false
 LWIP.DEFAULT_THREAD_STACKSIZE=2048
 LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS,LWIP_HTTPD,TCP_WND,TCP_MSS,TCP_SND_BUF,MEMP_NUM_TCP_SEG,MEMP_NUM_TCP_PCB,MEMP_NUM_NETBUF,MEMP_NUM_NETCONN,MEMP_NUM_TCPIP_MSG_API,TCPIP_THREAD_STACKSIZE,SLIPIF_THREAD_STACKSIZE,DEFAULT_THREAD_STACKSIZE,LWIP_UDP,TCPIP_THREAD_PRIO
@@ -65,16 +68,17 @@ LWIP.Version=v2.0.3_Cube
 Mcu.Family=STM32F4
 Mcu.IP0=DMA
 Mcu.IP1=ETH
-Mcu.IP10=USART1
+Mcu.IP10=UART5
+Mcu.IP11=USART1
 Mcu.IP2=FREERTOS
-Mcu.IP3=LWIP
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SYS
-Mcu.IP7=TIM7
-Mcu.IP8=TIM8
-Mcu.IP9=UART5
-Mcu.IPNb=11
+Mcu.IP3=IWDG
+Mcu.IP4=LWIP
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SYS
+Mcu.IP8=TIM7
+Mcu.IP9=TIM8
+Mcu.IPNb=12
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0-OSC_IN
@@ -93,10 +97,11 @@ Mcu.Pin2=PC1
 Mcu.Pin20=PB3
 Mcu.Pin21=PE0
 Mcu.Pin22=VP_FREERTOS_VS_ENABLE
-Mcu.Pin23=VP_LWIP_VS_Enabled
-Mcu.Pin24=VP_SYS_VS_tim1
-Mcu.Pin25=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin26=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin23=VP_IWDG_VS_IWDG
+Mcu.Pin24=VP_LWIP_VS_Enabled
+Mcu.Pin25=VP_SYS_VS_tim1
+Mcu.Pin26=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin27=VP_TIM8_VS_ClockSourceINT
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA7
@@ -104,7 +109,7 @@ Mcu.Pin6=PC4
 Mcu.Pin7=PC5
 Mcu.Pin8=PE9
 Mcu.Pin9=PE10
-Mcu.PinsNb=27
+Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -211,7 +216,7 @@ ProjectManager.StackSize=0x4000
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_LWIP_Init-LWIP-false-HAL-true,5-MX_UART5_Init-UART5-false-HAL-true,6-MX_TIM8_Init-TIM8-false-HAL-true,7-MX_TIM7_Init-TIM7-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_LWIP_Init-LWIP-false-HAL-true,5-MX_UART5_Init-UART5-false-HAL-true,6-MX_TIM8_Init-TIM8-false-HAL-true,7-MX_TIM7_Init-TIM7-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_IWDG_Init-IWDG-false-HAL-true
 RCC.48MHZClocksFreq_Value=67200000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -262,6 +267,8 @@ USART1.Mode=MODE_TX
 USART1.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_ENABLE.Mode=Enabled
 VP_FREERTOS_VS_ENABLE.Signal=FREERTOS_VS_ENABLE
+VP_IWDG_VS_IWDG.Mode=IWDG_Activate
+VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_LWIP_VS_Enabled.Mode=Enabled
 VP_LWIP_VS_Enabled.Signal=LWIP_VS_Enabled
 VP_SYS_VS_tim1.Mode=TIM1
